<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">R-U-ON</string>
    <string name="email_title">Email</string>
    <string name="password_title">Password</string>
    <string name="login_title">Login</string>
    <string name="alarms_title">Alarms</string>
    <string name="authentication_error">Authentication error</string>
    <string name="empty_email_title">Please enter a valid email address</string>
    <string name="network_error">There is no internet connection</string>

    <string name="empty_password_title">Please enter a password</string>
    <string name="open_account_hint">To open an account, visit www.r-u-on.com</string>

    <string name="action_settings">Settings</string>
    <string name="agent_title">Agent</string>
    <string name="severity_title">Severity</string>
    <string name="time_up_title">Time up</string>
    <string name="error_label">An error has occurred</string>

    <string name="no_alarms_title">There are no alarms :-)</string>
    <string name="login_copy_right_message">Copyright \u00a9 2008-%d</string>
    <string name="channel_name">Alarms with %1s ringtone sound</string>
    <string name="channel_description">R-U-On alarm notifications with %1s ringtone sound</string>
    <string name="channel_id">ruon_notification_channel</string>
    <string name="notification_permission_required_dialog_title">Notification Permission Required</string>
    <string name="notification_permission_required_dialog_message">The app needs permission to send notifications. Please enable it in the app settings.</string>
    <string name="notification_permission_required_dialog_go_to_settings">Go to Settings</string>
    <string name="notification_permission_required_cancel">Cancel</string>

</resources>
