<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/alert_message"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:textSize="24dp"
            android:clickable="true"
            android:textStyle="bold"
            android:textColor="@color/app_major"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_title"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_title"/>

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:layout_marginTop="12dp"
            android:textSize="24sp"
            android:clickable="true"
            android:textStyle="bold"
            android:padding="16dp"
            android:textColor="@color/app_green"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/account_hint"
            android:layout_marginTop="30dp"
            android:text="@string/open_account_hint"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_bar"
        android:background="#22444444"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:clickable="true"
        android:visibility="gone"
        android:paddingTop="100dp">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:text="@string/login_copy_right_message"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:layout_alignParentLeft="true"/>
</RelativeLayout>
