<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alarm_detail"
        android:layout_width="match_parent"
        android:textColor="@android:color/black"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@android:color/white"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="20sp"
            android:text="@string/agent_title"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/alarm_agent"
            android:layout_weight="0.5"
            android:gravity="right"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/severity_container"
        android:padding="8dp"
        android:background="@android:color/white"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="20sp"
            android:text="@string/severity_title"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/alarm_severity"
            android:layout_weight="0.5"
            android:gravity="right"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@android:color/white"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="20sp"
            android:text="@string/time_up_title"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_weight="0.5"/>
        <TextView
            android:id="@+id/alarm_timestamp"
            android:layout_weight="0.5"
            android:gravity="right"
            android:singleLine="true"
            android:ellipsize="end"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>